# syncstorage-rs

./: .clog.toml  .dockerignore  .flake8  .gitignore  .gitmodules  .nvim-dap.lua  .pre-commit-config.yaml  .sentryclirc.example  .travis.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-e2e  Dockerfile.sqlite  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  docker-compose.e2e.mysql-old.yaml  docker-compose.e2e.mysql.yaml  docker-compose.e2e.postgres.yaml  docker-compose.e2e.spanner-old.yaml  docker-compose.e2e.spanner.yaml  docker-compose.e2e.sqlite.yaml  docker-compose.e2e.tokenserver.yaml  docker-compose.e2e.yaml  docker-compose.mysql.yaml  docker-compose.postgres.yaml  docker-compose.spanner.yaml  docker-compose.sqlite.yaml  docker-compose.yaml  err.txt  make_hawk_token.py  prepare-spanner.sql  pyproject.toml  recipe.json  requirements.txt  run.sh  shell.nix  (+10 more)
db-tests/: Cargo.toml  rust-toolchain
db-tests/src/: batch.rs  db_tests.rs  lib.rs  support.rs
glean/: Cargo.toml  metrics.yaml  pings.yaml
glean/data-review/: request.md
glean/src/: lib.rs  server_events.rs
syncserver/: Cargo.toml
syncserver-common/: Cargo.toml
syncserver-common/src/: lib.rs  metrics.rs  tags.rs
syncserver-common/src/middleware/: mod.rs  sentry.rs
syncserver-db-common/: Cargo.toml
syncserver-db-common/src/: error.rs  lib.rs  params.rs  test.rs  util.rs
syncserver-settings/: Cargo.toml
syncserver-settings/src/: lib.rs
syncserver/examples/: generate_openapi_spec.rs
syncserver/src/: error.rs  lib.rs  logging.rs  main.rs
syncserver/src/db/: mock.rs  mod.rs  transaction.rs
syncserver/src/logging/: mod.rs  mozlog.rs
syncserver/src/middleware/: mod.rs  rejectua.rs  sentry.rs
syncserver/src/server/: metrics.rs  mod.rs  test.rs  user_agent.rs
syncserver/src/tokenserver/: extractors.rs  handlers.rs  logging.rs  mod.rs
syncserver/src/web/: auth.rs  error.rs  extractors.rs  handlers.rs  mod.rs  payload_offload.rs  tags.rs  transaction.rs
syncstorage/: Cargo.toml
syncstorage-db/: Cargo.toml
syncstorage-db-common/: Cargo.toml
syncstorage-db-common/src/: diesel.rs  error.rs  lib.rs  params.rs  results.rs  util.rs
syncstorage-db/src/: lib.rs  mock.rs
syncstorage-db/src/tests/: batch.rs  db.rs  support.rs
syncstorage-mysql/: Cargo.toml
syncstorage-mysql/migrations/2018-08-28-010336_init/: down.sql  up.sql
syncstorage-mysql/src/: batch.rs  diesel_ext.rs  error.rs  lib.rs  models.rs  pool.rs  test.rs
syncstorage-mysql/src/db/: batch_impl.rs  db_impl.rs  diesel_ext.rs  mod.rs  schema.rs
syncstorage-postgres/: Cargo.toml  diesel.toml  syncstorage_postgres_db.md
syncstorage-postgres/migrations/2025-10-20-155711_create_schema/: down.sql  up.sql
syncstorage-postgres/src/: lib.rs  orm_models.rs  pool.rs  schema.rs
syncstorage-postgres/src/db/: batch_commit.sql  batch_impl.rs  db_impl.rs  mod.rs  post_bsos.sql
syncstorage-spanner/: Cargo.toml
syncstorage-spanner/src/: batch.rs  error.rs  lib.rs  macros.rs  metadata.rs  models.rs  pool.rs  schema.ddl  stream.rs  support.rs
syncstorage-spanner/src/db/: BATCH_COMMIT.txt  batch_commit_upsert.sql  batch_impl.rs  db_impl.rs  mod.rs  stream.rs  support.rs
syncstorage-spanner/src/manager/: bb8.rs  deadpool.rs  mod.rs  session.rs
syncstorage-sqlite/: Cargo.toml
syncstorage-sqlite/migrations/2024-01-19-131212_Init/: down.sql  up.sql
syncstorage-sqlite/src/: batch.rs  batch_commit.sql  diesel_ext.rs  error.rs  lib.rs  models.rs  pool.rs  test.rs  wal.rs
syncstorage-web/: Cargo.toml
syncstorage-web/src/: error.rs  lib.rs  metrics.rs  test.rs
syncstorage-web/src/api/: auth.rs  extractors.rs  handlers.rs  mod.rs  transaction.rs
syncstorage-web/src/middleware/: mod.rs  tokenserver_origin.rs  weave.rs
syncstorage/src/: error.rs  logging.rs  main.rs  settings.rs
syncstorage/src/db/: mock.rs  mod.rs  transaction.rs
syncstorage/src/server/: mod.rs  test.rs
syncstorage/src/tokenserver/: README.md  extractors.rs  handlers.rs  logging.rs  mod.rs  settings.rs
syncstorage/src/web/: auth.rs  error.rs  extractors.rs  handlers.rs  mod.rs
tokenserver-auth/: Cargo.toml
tokenserver-auth/src/: browserid.rs  crypto.rs  lib.rs  oauth.rs  test_utils.rs  token.rs
tokenserver-auth/src/oauth/: native.rs  py.rs  verify.py
tokenserver-common/: Cargo.toml
tokenserver-common/src/: error.rs  lib.rs
tokenserver-db/: Cargo.toml
tokenserver-db-common/: Cargo.toml
tokenserver-db-common/src/: error.rs  lib.rs  params.rs  results.rs
tokenserver-db-postgres/: Cargo.toml  diesel.toml  tokenserver_db.md
tokenserver-db-postgres/src/: lib.rs  models.rs  orm_models.rs  params.rs  pool.rs  schema.rs
tokenserver-db/src/: error.rs  lib.rs  mock.rs  models.rs  params.rs  pool.rs  results.rs  tests.rs
tokenserver-mysql/: Cargo.toml
tokenserver-mysql/src/: error.rs  lib.rs  mock.rs  models.rs  pool.rs
tokenserver-postgres/: Cargo.toml  diesel.toml
tokenserver-postgres/src/: lib.rs  pool.rs
tokenserver-web/: Cargo.toml
tokenserver-web/src/: error.rs  extractors.rs  handlers.rs  lib.rs  middleware.rs
tools/hawk/: README.md  __init__.py  make_hawk_token.py  pyproject.toml  requirements.txt  test_make_hawk_token.py
tools/integration_tests/: __init__.py  conftest.py  helpers.py  old_storage_checks.py  pyproject.toml  requirements.txt  run.py  run2.py  test_payload_link_reconciliation.py  test_storage.py  test_support.py  test_tokenserver.py  tests-memcached-cacheonly.ini  tests-memcached-writethrough.ini  tests-memcached.ini  tests-no-batch.ini  tests-paginated.ini  tests.ini
tools/migration_rs/: Cargo.toml
tools/payload-reconciler/: README.md  pyproject.toml  reconcile_payload_links.py  test_reconcile_payload_links.py  test_utils.py  utils.py
tools/postgres/: Dockerfile  README.md  purge_ttl.py  pyproject.toml  test_purge_ttl.py
tools/spanner/: Dockerfile  README.md  __init__.py  count_expired_rows.py  count_users.py  purge_ttl.py  pyproject.toml  requirements.txt  string_to_bytes.py  test_count_expired_rows.py  test_purge_ttl.py  test_utils.py  utils.py  write_batch.py
(+490 files in other folders)
