[workspace]
resolver = "2"
members = [
  "syncserver-common",
  "syncserver-db-common",
  "syncserver-settings",
  "syncstorage-db",
  "syncstorage-db-common",
  "syncstorage-mysql",
  "syncstorage-settings",
  "syncstorage-spanner",
  "tokenserver-auth",
  "tokenserver-common",
  "tokenserver-db",
  "tokenserver-settings",
  "syncserver",
]
default-members = ["syncserver"]

[workspace.package]
version = "0.17.15"
authors = [
  "Ben Bangert <ben@groovie.org>",
  "Phil Jenvey <pjenvey@underboss.org>",
  "Mozilla Services Engineering <services-engineering+code@mozilla.com>",
]
edition = "2021"
license = "MPL-2.0"

[workspace.dependencies]
actix-web = "4"

docopt = "1.1"
base64 = "0.22"

# Updating to 2.* requires changes to the Connection code for logging.
# (Adding an `instrumentation()` and `set_instrumentation()` method.)
# More investigation required.
diesel = "1.4"
diesel_migrations = "1.4"
diesel_logger = "0.1"

cadence = "1.3"
backtrace = "0.3"
chrono = "0.4"
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
env_logger = "0.11"
futures = { version = "0.3", features = ["compat"] }
futures-util = { version = "0.3", features = [
  "async-await",
  "compat",
  "sink",
  "io",
] }
hex = "0.4"
hostname = "0.4"
hkdf = "0.12"
hmac = "0.12"
http = "1.1"
jsonwebtoken = { version = "9.2", default-features = false }
lazy_static = "1.4"
protobuf = "=2.25.2" # pin to 2.25.2 to prevent side updating
rand = "0.8"
regex = "1.4"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
sentry = { version = "0.35", default-features = false, features = [
  "curl",
  "backtrace",
  "contexts",
  "debug-images",
] }
sentry-backtrace = "0.35"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sha2 = "0.10"
slog = { version = "2.5", features = [
  "max_level_trace",
  "release_max_level_info",
  "dynamic-keys",
] }
slog-async = "2.5"
slog-envlogger = "2.2.0"
slog-mozlog-json = "0.1"
slog-scope = "4.3"
slog-stdlog = "4.1"
slog-term = "2.6"
tokio = "1"
thiserror = "1.0.26"
uuid = { version = "1.11", features = ["serde", "v4"] }

[profile.release]
# Enables line numbers in Sentry reporting
debug = 1
