[workspace]
resolver = "2"
members = [
  "syncserver-common",
  "syncserver-db-common",
  "syncserver-settings",
  "syncstorage-db",
  "syncstorage-db-common",
  "syncstorage-mysql",
  "syncstorage-settings",
  "syncstorage-spanner",
  "tokenserver-auth",
  "tokenserver-common",
  "tokenserver-db",
  "tokenserver-settings",
  "syncserver",
  "tokenserver-postgres",
  "tokenserver-db-common", "syncstorage-postgres", "tokenserver-mysql",
]
default-members = ["syncserver"]

[workspace.package]
version = "0.21.1"
authors = [
  "Mozilla Sync Backend Engineering <sync-backend@mozilla.com",
]
edition = "2024"
rust-version = "1.91" # RUST_VER
license = "MPL-2.0"

[workspace.dependencies]
actix-web = { version = "4", default-features = false, features = ["compat", "http2", "macros"] }
async-trait = "0.1.89"
docopt = "1.1"
base64 = "0.22"

diesel = "2.3"
diesel-async = { version = "0.7", features = ["mysql", "deadpool", "migrations", "async-connection-wrapper"] }
diesel_migrations = "2.3"

cadence = "1.7"
backtrace = "0.3"
chrono = "0.4"
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
env_logger = "0.11"
futures = { version = "0.3", features = ["compat"] }
futures-util = { version = "0.3", features = [
  "async-await",
  "compat",
  "sink",
  "io",
] }
hex = "0.4"
hostname = "0.4"
hkdf = "0.12"
hmac = "0.12"
http = "1.4"
jsonwebtoken = { version = "10.3", default-features = false }
lazy_static = "1.5"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }
protobuf = "=2.25.2" # pin to 2.25.2 to prevent side updating
rand = "0.8"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
] }
sentry = { version = "0.42", default-features = false, features = [
  "curl",
  "backtrace",
  "contexts",
  "debug-images",
] }
sentry-backtrace = "0.42"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sha2 = "0.10"
slog = { version = "2.8", features = [
  "max_level_trace",
  "release_max_level_info",
  "dynamic-keys",
] }
slog-async = "2.8"
slog-envlogger = "2.2.0"
slog-mozlog-json = "0.1"
slog-scope = "4.4"
slog-stdlog = "4.1"
slog-term = "2.9"
temp-env = { version = "0.3", features = ["async_closure"] }
tokio = "1"
thiserror = "1.0.69"
time = "0.3.47"
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
uuid = { version = "1.20", features = ["serde", "v4"] }

[profile.release]
# Enables line numbers in Sentry reporting
debug = 1
