[package]
name = "db-tests"
version = "0.1.0"
authors = ["Philip Jenvey <pjenvey@underboss.org>"]
edition = "2018"

[dependencies]
codegen = { version = "0.1.0", path = "../codegen" }
env_logger = "0.7.0"
futures-preview = { git = "https://github.com/rust-lang-nursery/futures-rs", rev = "744ece9", features = ["compat"] }
lazy_static = "1.4.0"
log="0.4"
rand = "0.7.2"
syncstorage = { path = "../", features = ["db_test"] }

