[package]
name = "syncserver-common"
version = "0.13.0"
edition = "2021"

[dependencies]
actix-web = "3"
cadence = "0.26"
futures = "0.3"
hkdf = "0.11"
sha2 = "0.9"
serde = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
slog = { version = "2.5", features = [
  "max_level_info",
  "release_max_level_info",
  "dynamic-keys",
] }
slog-scope = "4.3"
