[package]
name = "syncserver-common"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
actix-web.workspace = true
backtrace.workspace = true
cadence.workspace = true
futures.workspace = true
futures-util.workspace = true
sha2.workspace = true
sentry.workspace = true
sentry-backtrace.workspace = true
serde_json.workspace = true
slog.workspace = true
slog-scope.workspace = true
hkdf.workspace = true

scopeguard = "1.2"
