[package]
name = "syncserver-db-common"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
backtrace.workspace = true
deadpool.workspace = true
futures.workspace = true
http.workspace = true
thiserror.workspace = true

diesel = { workspace = true, features = ["mysql", "sqlite","r2d2"] }
diesel_migrations = { workspace = true, features = ["mysql", "sqlite"] }
syncserver-common = { path = "../syncserver-common" }

[features]
sql = []
