[package]
name = "syncserver-db-common"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
backtrace.workspace = true
deadpool.workspace = true
futures.workspace = true
http.workspace = true
thiserror.workspace = true

diesel = { workspace = true, features = ["mysql", "r2d2"] }
diesel_migrations = { workspace = true, features = ["mysql"] }
syncserver-common = { path = "../syncserver-common" }
