[package]
name = "syncserver-settings"
version = "0.13.1"
edition = "2021"

[dependencies]
config = "0.11"
num_cpus = "1"
serde = "1.0"
slog-scope = "4.3"
syncserver-common = { path = "../syncserver-common" }
syncstorage-settings = { path = "../syncstorage-settings" }
tokenserver-settings = { path = "../tokenserver-settings" }
url = "2.1"
