[package]
name = "syncserver"
default-run = "syncserver"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
actix-web.workspace = true
backtrace.workspace = true
base64.workspace = true
cadence.workspace = true
chrono.workspace = true
docopt.workspace = true
futures.workspace = true
hex.workspace = true
hostname.workspace = true
http.workspace = true
lazy_static.workspace = true
rand.workspace = true
regex.workspace = true
sentry.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
slog.workspace = true
slog-async.workspace = true
slog-envlogger.workspace = true
slog-mozlog-json.workspace = true
slog-scope.workspace = true
slog-stdlog.workspace = true
slog-term.workspace = true
hmac.workspace = true
thiserror.workspace = true

actix-http = "3"
actix-rt = "2"
actix-cors = "0.7"
glean = { path = "../glean" }
hawk = "5.0"
mime = "0.3"
# pin to 0.19: https://github.com/getsentry/sentry-rust/issues/277
syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common" }
syncserver-settings = { path = "../syncserver-settings" }
syncstorage-db = { path = "../syncstorage-db" }
syncstorage-settings = { path = "../syncstorage-settings" }
time = "^0.3"
tokenserver-auth = { path = "../tokenserver-auth" }
tokenserver-common = { path = "../tokenserver-common" }
tokenserver-db = { path = "../tokenserver-db" }
tokenserver-settings = { path = "../tokenserver-settings" }
tokio = { workspace = true, features = ["macros", "sync"] }
urlencoding = "2.1"
validator = "0.20"
validator_derive = "0.20"
woothee = "0.13"

[features]
default = ["mysql", "py_verifier"]
no_auth = []
py_verifier = ["tokenserver-auth/py", "tokenserver-common/py"]
mysql = ["syncstorage-db/mysql"]
postgres = ["syncstorage-db/postgres"]
spanner = ["syncstorage-db/spanner"]
actix-compress = ["actix-web/compress-brotli", "actix-web/compress-gzip", "actix-web/compress-zstd"]
