[package]
name = "syncstorage-db-common"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
backtrace.workspace = true
chrono.workspace = true
futures.workspace = true
lazy_static.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

async-trait = "0.1.40"
diesel = { workspace = true, features = ["mysql", "r2d2"] }
diesel_migrations = { workspace = true, features = ["mysql"] }
syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common" }
