[package]
name = "syncstorage-db-common"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
backtrace.workspace = true
chrono.workspace = true
deadpool.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
http.workspace = true
lazy_static.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common" }
