[package]
name = "syncstorage-db"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
rand.workspace = true
slog-scope.workspace = true

log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_info",
] }
syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common" }
syncserver-settings = { path = "../syncserver-settings" }
syncstorage-db-common = { path = "../syncstorage-db-common" }
syncstorage-mysql = { path = "../syncstorage-mysql", optional = true }
syncstorage-postgres = { path = "../syncstorage-postgres", optional = true }
syncstorage-settings = { path = "../syncstorage-settings" }
syncstorage-spanner = { path = "../syncstorage-spanner", optional = true }
tokio = { workspace = true, features = ["macros", "sync"] }

[features]
mysql = ['syncstorage-mysql']
postgres = ['syncstorage-postgres']
spanner = ['syncstorage-spanner']
