[package]
name = "syncstorage-mysql"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
backtrace.workspace = true
base64.workspace = true
futures.workspace = true
http.workspace = true
slog-scope.workspace = true
thiserror.workspace = true

async-trait = "0.1.40"
diesel = { workspace = true, features = ["mysql", "r2d2"] }
diesel_logger = { workspace = true }
diesel_migrations = { workspace = true, features = ["mysql"] }
syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common", features = ["sql"] }
syncstorage-db-common = { path = "../syncstorage-db-common" }
syncstorage-settings = { path = "../syncstorage-settings" }
syncstorage-sql-db-common = { path = "../syncstorage-sql-db-common" }
url = "2.1"

[dev-dependencies]
env_logger.workspace = true
syncserver-settings = { path = "../syncserver-settings" }
