[package]
name = "syncstorage-postgres"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
backtrace.workspace = true
base64.workspace = true
deadpool.workspace = true
diesel.workspace = true
diesel-async = { workspace = true, features = ["postgres"] }
diesel_logger.workspace = true
diesel_migrations.workspace = true
http.workspace = true
slog-scope.workspace = true
thiserror.workspace = true

tokio = { workspace = true, features = ["macros", "sync"] }
url = "2.1"
syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common" }
syncstorage-db-common = { path = "../syncstorage-db-common" }
syncstorage-settings = { path = "../syncstorage-settings" }
