[package]
name = "syncstorage-postgres"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
backtrace.workspace = true
base64.workspace = true
chrono.workspace = true
deadpool.workspace = true
diesel = { workspace = true, features = ["chrono", "postgres", "uuid"] }
diesel-async = { workspace = true, features = ["postgres"] }
diesel_migrations.workspace = true
futures.workspace = true
http.workspace = true
slog-scope.workspace = true
thiserror.workspace = true
uuid.workspace = true

url = "2.1"
syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common" }
syncstorage-db-common = { path = "../syncstorage-db-common" }
syncstorage-settings = { path = "../syncstorage-settings" }
