[package]
name = "syncstorage-spanner"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
actix-web.workspace = true
backtrace.workspace = true
cadence.workspace = true
deadpool.workspace = true
env_logger.workspace = true
futures.workspace = true
http.workspace = true
slog-scope.workspace = true
thiserror.workspace = true
uuid.workspace = true

async-trait = "0.1.40"
google-cloud-rust-raw = { version = "0.16.1", features = ["spanner"] }
form_urlencoded = "1.2"
# Some versions of OpenSSL 1.1.1 conflict with grpcio's built-in boringssl which can cause
# syncserver to either fail to either compile, or start. In those cases, try
# `cargo build --features grpcio/openssl ...`
grpcio = { version = "0.13.0", features = ["openssl"] }
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_info",
] }
protobuf = { version = "2.28.0" } # must match what's used by googleapis-raw
syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common" }
syncstorage-db-common = { path = "../syncstorage-db-common" }
syncstorage-settings = { path = "../syncstorage-settings" }
tokio = { workspace = true, features = [
  "macros",
  "sync",
] }
url = "2.1"

[[bin]]
name = "purge_ttl"
path = "src/bin/purge_ttl.rs"
