[package]
name = "syncstorage-sqlite"
version.workspace=true
license.workspace=true
authors.workspace=true
edition.workspace=true

[dependencies]
backtrace.workspace=true
base64.workspace=true
futures.workspace=true
http.workspace=true
slog-scope.workspace=true
thiserror.workspace = true
diesel_logger.workspace = true

async-trait = "0.1.40"
diesel = { workspace = true, features = ["sqlite", "r2d2"] }
diesel_migrations = { workspace = true, features = ["sqlite"] }
syncserver-common = { path = "../syncserver-common" }
syncserver-db-common = { path = "../syncserver-db-common", features = ["sqlite"] }
syncstorage-db-common = { path = "../syncstorage-db-common" }
syncstorage-settings = { path = "../syncstorage-settings" }
syncstorage-sql-db-common = { path = "../syncstorage-sql-db-common" }
url = "2.1"

[dev-dependencies]
env_logger.workspace=true
syncserver-settings = { path = "../syncserver-settings" }
